--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ html,body,.grid,.grid .col,.card-bd{overflow-anchor:none}
     <div class="toolbar">
       <div class="search">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/></svg>
-        <input id="q" placeholder="Search adventures (name, code, notes, DM)"/>
+        <input id="q" placeholder="Search adventures"/>
       </div>
       <button id="activityToggle" class="btn small" type="button" aria-pressed="false">Hide activities</button>
       <button id="addCard" class="icon-btn" title="Add new adventure" aria-label="Add new adventure">
